--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,14 @@
   </head>
 
   <body>
+    <div>
+      <%= alert %>
+    </div>
+
+    <div>
+      <%= notice %>
+    </div>
+
     <%= yield %>
   </body>
 </html>
