--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -28,7 +28,7 @@
           User
         </label>
 
-        <input type="text" id="user_id_box" name="query_user_id">
+        <input type="text" id="user_id_box" name="query_user_id" value="<%= session.fetch(:user_id)%>">
       </div>
 
       <div>
