--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,12 @@
   </head>
 
   <body>
-    <div>
-      <%= alert %>
+    <div style="color:green">
+      <%= notice %>
     </div>
 
-    <div>
-      <%= notice %>
+    <div style="color:red">
+      <%= alert %>
     </div>
 
     <%= yield %>
